--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2074,7 +2074,11 @@ pre code {
     padding-right: 15px;
     padding-left: 15px
 }
-
+@media screen and (max-width:768px) {
+    .col-sm-6{
+        padding: 0;
+    }
+}
 .col-xs-1,
 .col-xs-10,
 .col-xs-11,
